cleanup code to replace deprecated initializers for primatives and to remove finalize() calls